# 2022_2_technokaif

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  config-test.ovpn  docker-compose.yml  output  run-openvpn  run-openvpn.cpp  tests.sh
.github/workflows/: ci.yml
_sql/: init_up.sql
client/: CMakeLists.txt  main.cpp  run-openvpn.cpp
client/gui/: CMakeLists.txt  main.cpp  widget.ui
client/gui/include/: user.h
client/gui/include/tools/: utils.h  vpncontext.h
client/gui/include/windows/: authorizer.h  base.h  configwindow.h  homewindow.h  mainwindow.h  start_page.h  url_configuration.h  user_settings.h
client/gui/src/: base.cpp  configwindow.cpp  homewindow.cpp  main.cpp
client/include/: server_connect.h  user.h
client/include/gui/: authorizer.h  base.h  configwindow.h  countrywindow.h  homewindow.h  user_settings.h
client/include/network/: client.h
client/include/tools/: utils.h  vpncontext.h
client/include/windows/: start_page.h
client/network/: CMakeLists.txt
client/network/include/: client.h  tools.h
client/network/src/: client.cpp
client/src/: main.cpp
client/src/gui/: base.cpp  configwindow.cpp  countrywindow.cpp  homewindow.cpp
client/src/network/: client.cpp
scripts/: build.sh  tests.sh  valgrind.sh
scripts/linters/: run.sh
server/: CMakeLists.txt  main.cpp
server/logic/: CMakeLists.txt  logic.cpp  logic.hpp
server/logic/include/: handler.hpp  logic.hpp  tools.h
server/logic/src/: handler  handler.cpp  ip.md  logic.cpp  openVpnRun.sh
server/net/: CMakeLists.txt
server/net/include/: server.hpp  vpn_connection.hpp
server/net/src/: server.cpp  vpn_connection.cpp
server/tests/: CMakeLists.txt  gTests.cpp  gmockTest.cpp  gmockTests.cpp  logic_test.cpp  server_test.cpp  test.cpp  vpn_connection_test.cpp
tools/: tools.h
uml/: README.md  UML_RABBIT_HOLE.drawio
